--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "strapi",
+    "name": "priceco-api",
     "version": "0.1.0",
     "private": true,
     "description": "A Strapi application",
@@ -16,8 +16,8 @@
     "dependencies": {
         "@strapi/plugin-cloud": "4.16.0",
         "@strapi/plugin-i18n": "4.16.0",
-        "@strapi/plugin-users-permissions": "4.16.0",
-        "@strapi/strapi": "4.16.0",
+        "@strapi/plugin-users-permissions": "^4.25.2",
+        "@strapi/strapi": "^4.25.2",
         "better-sqlite3": "8.6.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
