--- a/.github/workflows/captain.yml
+++ b/.github/workflows/captain.yml
@@ -23,7 +23,11 @@ jobs:
                   password: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Preset Image Name
-              run: echo "IMAGE_URL=$(echo ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:$(echo ${{ github.sha }} | cut -c1-7) | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+              run: echo "IMAGE_URL=ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}" >> $GITHUB_ENV
+
+            - name: Set short SHA
+              id: sha
+              run: echo "sha_short=$(echo ${{ github.sha }} | cut -c1-7 | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
 
             - name: Build and push Docker Image
               uses: docker/build-push-action@v5
@@ -31,7 +35,9 @@ jobs:
                   context: .
                   file: ./Dockerfile
                   push: true
-                  tags: ${{ env.IMAGE_URL }}
+                  tags: |
+                    ${{ env.IMAGE_URL }}:${{ steps.sha.outputs.sha_short }}
+                    ${{ env.IMAGE_URL }}:latest
                   build-args: |
                     ADMIN_JWT_SECRET=${{ secrets.ADMIN_JWT_SECRET }}
                     API_TOKEN_SALT=${{ secrets.API_TOKEN_SALT }}
