--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
         "strapi": "strapi"
     },
     "dependencies": {
-        "@strapi/plugin-cloud": "4.16.0",
-        "@strapi/plugin-i18n": "4.16.0",
+        "@strapi/plugin-i18n": "^4.25.2",
         "@strapi/plugin-users-permissions": "^4.25.2",
         "@strapi/strapi": "^4.25.2",
         "better-sqlite3": "8.6.0",
